--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           Ad aperiam quibusdam doloribus dolore itaque,
           Ad aperiam quibusdam doloribus dolore itaque, 
           d aperiam quibusdam doloribus dolore itaque,
+          d aperiam quibusdam doloribus dolore itaque,
           nisi optio dignissimos!</p>
       </article>
 
@@ -42,6 +43,7 @@
           adipisicing elit. Aspernatur, hic dolor. 
           Ad aperiam quibusdam doloribus dolore itaque,
           Ad aperiam quibusdam doloribus dolore itaque, 
+          d aperiam quibusdam doloribus dolore itaque,
           d aperiam quibusdam doloribus dolore itaque,
           nisi optio dignissimos!!</p>        
       </article>
@@ -61,6 +63,7 @@
           Ad aperiam quibusdam doloribus dolore itaque,
           Ad aperiam quibusdam doloribus dolore itaque, 
           d aperiam quibusdam doloribus dolore itaque,
+          d aperiam quibusdam doloribus dolore itaque,
           nisi optio dignissimos!</p> 
       </article>
       <!-- LIGHT -->
@@ -76,6 +79,7 @@
           adipisicing elit. Aspernatur, hic dolor. 
           Ad aperiam quibusdam doloribus dolore itaque,
           Ad aperiam quibusdam doloribus dolore itaque, 
+          d aperiam quibusdam doloribus dolore itaque,
           d aperiam quibusdam doloribus dolore itaque,
           nisi optio dignissimos!</p> 
       </article>
